<resources>
    <string name="app_name">Seeking</string>

    <!--Title-->
    <string name="titleCompanyRegistration">Company Registration</string>
    <string name="titleCompanyUpdateProfile">Update Company Profile</string>

    <!--Hint Company Registration-->
    <string name="hint_company_name">Your company name....</string>
    <string name="hint_password">Your password...</string>
    <string name="hint_confirm_password">Confirm your password...</string>
    <string name="hint_email">ex: naufal@njy.com</string>
    <string name="hint_company_description">Company description...</string>
    <string name="hint_company_description_history">Description/History</string>
    <string name="hint_company_website">Company website...</string>
    <string name="hint_company_phone_number">Company phone number...</string>

    <!--TextView Company Registration-->
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone Number</string>
    <string name="find_office_address">Find Office Address</string>

    <!--Validation-->
    <string name="mustBeFilled">Must be filled</string>
    <string name="title_activity_companya_address">Map</string>
    <string name="title_activity_company_home">Company Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Employment Type-->
    <string-array name="type_array">
        <item>Part-time</item>
        <item>Fulltime</item>
        <item>Internship</item>
    </string-array>

    <!--Certification Company-->
    <string-array name="certification_company_array">
        <item></item>
        <item>Dicoding</item>
        <item>Udacity</item>
        <item>Udemy</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_seeker_home">Job Seeker Home</string>
    <string name="title_activity_vacancy_detail_seeker">VacancyDetailSeekerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_certification_detail">Certification Detail</string>
    <string name="title_activity_user_home">Sieve</string>

</resources>
