<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    tools:context="com.njy.seeking.EditCompanyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_company"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/addimage"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_find_address"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_office_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textPersonName"
            android:id="@+id/edt_company_name"
            android:hint="@string/hint_company_name"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:hint="@string/hint_email"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:hint="@string/hint_password"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="phone"
            android:id="@+id/edt_phone"
            android:hint="@string/hint_company_phone_number"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textUri"
            android:id="@+id/edt_website"
            android:hint="@string/hint_company_website"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_company_description_history"/>

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:lines="2"
            android:hint="@string/hint_company_description"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit_profile"
            android:text="Edit Profile"
            android:layout_marginBottom="@dimen/dimen_16dp"/>

    </LinearLayout>

</ScrollView>
