<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    tools:context="com.njy.seeking.company.LoginCompanyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Company Login"
            android:textSize="22sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/edt_email"
            android:padding="@dimen/dimen_10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/edt_password"
            android:padding="@dimen/dimen_10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="Login"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/dimen_16dp"/>

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Belum punya akun? Silahkan daftar"/>

            <TextView
                android:id="@+id/txt_disini"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="di sini"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
